Fix heading breaking layout on mobile
Head was not clearing floats on smaller devices.

--- a/app/assets/stylesheets/pages/_area-show.sass
+++ b/app/assets/stylesheets/pages/_area-show.sass
@@ -26,5 +26,11 @@
     border-left: 3px solid $background
     height: 100%
 
+.card-heading
+  padding-top: 2em
+  clear: both
+  +media($medium-screen-up)
+    padding-top: 0
+
 #card-wrapper
   margin-top: $medium-spacing
